--- a/pom.xml
+++ b/pom.xml
@@ -8,14 +8,6 @@
     <artifactId>API-RestAssured</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <aspectj.version>1.9.9.1</aspectj.version>
-        <allure.version>2.13.5</allure.version>
-    </properties>
-
     <!-- Compiler/ Run Test -->
     <build>
         <plugins>
@@ -35,7 +27,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M6</version>
+                <version>2.22.2</version>
                 <configuration>
                     <!-- Run TestNG xml file -->
                     <suiteXmlFiles>
@@ -50,6 +42,14 @@
             </plugin>
         </plugins>
     </build>
+
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <aspectj.version>1.9.9.1</aspectj.version>
+        <allure.version>2.13.5</allure.version>
+    </properties>
 
     <dependencies>
         <dependency>
